--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="row mt-4 mb-4">
             <div class="col-10 offset-1 col-lg-8 offset-lg-2">
                 <p>
-                    <a href="#more-info">Sacred Harp</a> is a community folk hymn singing tradition from the United
+                    <a href="#more-information">Sacred Harp</a> is a community folk hymn singing tradition from the United
                     States. The Sacred Harp is
                     also the name of the book we sing from.</p>
                 <p>
@@ -87,8 +87,7 @@
                     <p>
                         <span class="font-italic font-weight-bold">We sing every 2nd and 4th Saturday 2pm - 4pm</span>
                         at
-                        <a href="#map" class="font-italic font-weight-bold" id="map-link">Antioch House, 66 Crossgate,
-                            Durham</a>.
+                        <a href="#venue" class="font-italic font-weight-bold" id="map-link">Antioch House, 66 Crossgate, Durham, DH1 4PR</a>.
                     </p>
 
                     <!-- upcoming singings html inserted with javascript -->
@@ -108,16 +107,18 @@
         </div>
         <div class="row mt-4" id="venue">
             <div class="col-10 offset-1 col-lg-8 offset-lg-2">
-                <h2 class="text-center">
+                <h2 class="text-center pb-2">
                     <u>Venue</u>
                 </h2>
+                <p class="text-center font-weight-bold">Antioch House, 66 Crossgate, Durham, DH1 4PR</p>
                 <p>
                     <a href="https://www.google.com/maps/place/Antioch+House+%E2%80%93+St+Margaret's+Parish+Centre/@54.7761972,-1.5821623,17z/data=!3m1!4b1!4m5!3m4!1s0x487e7d8abc0a764b:0x766ab837ecc03183!8m2!3d54.7758477!4d-1.5799069?hl=en-GB">Antioch
                         House</a> is the parish centre of St Margaret's Church which is over the road. It's
                     <a href="https://www.google.com/maps/dir/Durham+Train+Station,+Station+Approach,+Durham/Antioch+House+%E2%80%93+St+Margaret's+Parish+Centre,+66+Crossgate,+Durham+DH1+4PR/@54.7778203,-1.5829481,17z/am=t/data=!4m14!4m13!1m5!1m1!1s0x487e7df4b3ef5e51:0xa17d2107d3aabd3c!2m2!1d-1.5817251!2d54.7793784!1m5!1m1!1s0x487e7d8abc0a764b:0x766ab837ecc03183!2m2!1d-1.5799736!2d54.7761972!3e3?hl=en-GB">less
                         than 10 minutes on foot from the train station</a> and
                     <a href="https://www.google.com/maps/dir/Bus+Station,+Durham/Antioch+House+%E2%80%93+St+Margaret's+Parish+Centre,+66+Crossgate,+Durham+DH1+4PR/@54.7767393,-1.5816614,18z/am=t/data=!4m14!4m13!1m5!1m1!1s0x487e7df526427d15:0x47e764fbc246810d!2m2!1d-1.5821659!2d54.777366!1m5!1m1!1s0x487e7d8abc0a764b:0x766ab837ecc03183!2m2!1d-1.5799736!2d54.7761972!3e2?hl=en-GB">less
-                        than 5 minutes from the bus station</a>.</p>
+                        than 5 minutes from the bus station</a>. There is paid-for parking right outside the front door of the singing.</p>
+
                 <p class="text-center mb-0">
                     <small>Click on the map below for Google Maps</small>
                 </p>
