--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <a class="nav-link" href="#contact-us">Contact Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#updates-signup">Get Updates</a>
+                            <a class="nav-link" href="#get-updates">Get Updates</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#more-information">More Information</a>
