Scrolls down so content isn't hidden if starting URL contains a hash

--- a/index.html
+++ b/index.html
@@ -220,9 +220,7 @@
             </div>
         </main>
     </div>
-
-    <script src="js/later.min.js" integrity="sha384-vEZdS7b843boNPx50Z7Dyz32INueQjqBguuwXR35L8je2BiVqU5yiFRKsIU5jyJ7"
-        crossorigin="anonymous"></script>
+    <script src="js/later.min.js"></script>
     <script src="js/main.js"></script>
 
 </body>
