--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <h2 class="text-center pb-2">
                         <u>Venue</u>
                     </h2>
-                    <p class="text-center font-weight-bold"><a href="https://www.google.com/maps/place/Antioch+House+%E2%80%93+St+Margaret's+Parish+Centre/@54.7761972,-1.5821623,17z/data=!4m5!3m4!1s0x487e7d8abc0a764b:0x766ab837ecc03183!8m2!3d54.7758477!4d-1.5799069?hl=en-GB">Antioch House, 66 Crossgate, Durham, DH1 4PR</a></p>
+                    <p class="text-center font-weight-bold"><a href="https://www.google.com/maps/place/Antioch+House+%E2%80%93+St+Margaret's+Parish+Centre/@54.7761972,-1.5821623,17z/data=!4m5!3m4!1s0x487e7d8abc0a764b:0x766ab837ecc03183!8m2!3d54.7758477!4d-1.5799069?hl=en-GB">Ground floor room, Antioch House, 66 Crossgate, Durham, DH1 4PR</a></p>
                     <p>
                         <a href="https://www.google.com/maps/place/Antioch+House+%E2%80%93+St+Margaret's+Parish+Centre/@54.7761972,-1.5821623,17z/data=!3m1!4b1!4m5!3m4!1s0x487e7d8abc0a764b:0x766ab837ecc03183!8m2!3d54.7758477!4d-1.5799069?hl=en-GB">Antioch
                             House</a> is the parish centre of St Margaret's Church which is over the road. It's
