--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#contact-us">Contact Us</a>
                         </li>
-                        <li class="nav-item">
+<!--                         <li class="nav-item">
                             <a class="nav-link" href="#get-updates">Get Updates</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="#more-information">More Information</a>
                         </li>
@@ -165,7 +165,7 @@
                             </p>
                         </div>
                     </div>
-
+<!-- 
                     <div class="pt-3 pb-3 mt-4 mb-4 text-center border" id="get-updates">
 
                         <h5>Get updates about our singings</h5>
@@ -185,7 +185,7 @@
                                 an email from them to confirm you want to subscribe. This is <a href="https://mailchimp.com/legal/privacy/">their
                                     privacy policy</a>.</small>
                         </form>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
