--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <p><a href="#more-information">Sacred Harp</a> is a <strong>community folk hymn singing</strong> tradition from the United States. The Sacred Harp is also the name of the book we sing from.
                     </p>
                     <p>
-                        <strong>Our singings are open to all.</strong> We aren't a choir as
+                        <strong>Our singings are friendly and open to all.</strong> We aren't a choir because
                         we don't rehearse or perform and no-one's in charge. Everyone just sings for their own
                         enjoyment.<strong> You don't need to be able to read music yet or have a "good" voice to come along.</strong> Singers of all religions and none are welcome.</p>
                       <div class="notification px-3 px-md-5" id="notification">
@@ -94,7 +94,7 @@
                                 Crossgate, Durham, DH1 4PR</a>.
                         </p>
 
-                        <!-- upcoming singings html inserted with javascript -->
+                        <!-- upcoming singings html inserted here with Javascript -->
                         <div id="upcoming-singings"></div>
 
                     </div>
