--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#contact-us">Contact Us</a>
                         </li>
-<!--                         <li class="nav-item">
+                       <!--
+                        <li class="nav-item">
                             <a class="nav-link" href="#get-updates">Get Updates</a>
-                        </li> -->
+                        </li>
+                        -->
                         <li class="nav-item">
                             <a class="nav-link" href="#more-information">More Information</a>
                         </li>
