--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                         <strong>Our singings are friendly and open to all.</strong> We aren't a choir because
                         we don't rehearse or perform and no-one's in charge. Everyone just sings for their own
                         enjoyment.<strong> You don't need to be able to read music yet or have a "good" voice to come along.</strong> Singers of all religions and none are welcome.</p>
-                      <div class="notification px-3 px-md-5" id="notification">
+<!--                   <div class="notification px-3 px-md-5" id="notification">
                      <p>The singing on <strong>23rd February</strong> is off because we're all going to the Sheffield All-Day singing – <a href="http://www.ukshapenote.org.uk/calendar/calendar.html">Details here</a>. We'll be singing in Durham again on <strong>9th March</strong>.</p>
-                </div>
+                  </div> -->
 
 
                     <div class="highlight px-3 px-md-5 mb-4" id="next_singings">
